--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
-flask==2.0.2
-flask-login==0.5.0
-flask-sqlalchemy==2.5.1
-sqlalchemy-utils==0.38.2
+beautifulsoup4==4.10.0
+blinker==1.4
+branca==0.4.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+Flask==2.0.2
+Flask-Ext==0.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+folium==0.2.0
+geographiclib==1.52
+geopy==2.2.0
+greenlet==1.1.2
+idna==3.3
+isodate==0.6.1
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+numpy==1.22.2
+pyparsing==3.0.7
+rdflib==6.1.1
+requests==2.27.1
+six==1.16.0
+soupsieve==2.3.1
+SPARQLWrapper==2.0.0
+SQLAlchemy==1.4.22
+SQLAlchemy-Utils==0.38.2
+urllib3==1.26.8
+Werkzeug==2.0.3
+Whoosh==2.7.4
+wikipedia==1.4.0
