--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ branca==0.4.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
+cycler==0.11.0
 Flask==2.0.2
 Flask-Ext==0.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
 folium==0.2.0
+fonttools==4.33.3
 geographiclib==1.52
 geopy==2.2.0
 greenlet==1.1.2
@@ -17,11 +19,17 @@ idna==3.3
 isodate==0.6.1
 itsdangerous==2.1.0
 Jinja2==3.0.3
+kiwisolver==1.4.2
 MarkupSafe==2.1.0
+matplotlib==3.5.1
 numpy==1.22.2
+packaging==21.3
+Pillow==9.1.0
 pyparsing==3.0.7
+python-dateutil==2.8.2
 rdflib==6.1.1
 requests==2.27.1
+scipy==1.8.0
 six==1.16.0
 soupsieve==2.3.1
 SPARQLWrapper==2.0.0
